<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad\nto see you, Again!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <font color="#A45EE5"><B>Register Now</B></font></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="default_web_client_id">977644697938-9nptv2lbmk5cb4qrruvnnecnqc9m64le.apps.googleusercontent.com</string>
    <string name="back">Back</string>
</resources>